--- a/public/Admin/plugins/select2/css/select2.css
+++ b/public/Admin/plugins/select2/css/select2.css
@@ -203,7 +203,9 @@
     float: left;
     margin-right: 5px;
     margin-top: 5px;
-    padding: 0 5px; }
+    padding: 0 5px;
+    color:#000;
+   }
   .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
     color: #999;
     cursor: pointer;
