--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1315,7 +1315,7 @@ h3 {
 
 /* line 23, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_slider.scss */
 .slider_area .single_slider {
-  height: 650px;
+  height: 450px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -1324,7 +1324,7 @@ h3 {
 @media (max-width: 767px) {
   /* line 23, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_slider.scss */
   .slider_area .single_slider {
-    height: auto;
+    height: 250px;
   }
 }
 
@@ -2515,19 +2515,26 @@ h3 {
 }
 
 /* line 5, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss */
-.where_togo_area .form_area h3 {
-  font-size: 24px;
+.where_togo_area .form_area h4{
+  font-size: 16px;
   color: #fff;
   font-weight: 400;
   margin-bottom: 0;
 }
-
+.where_togo_area .form_area h3  {
+  font-size: 28px;
+  color: #fff;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+/*
 @media (max-width: 767px) {
-  /* line 5, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss */
+  /* line 5, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss 
   .where_togo_area .form_area h3 {
     margin-bottom: 15px;
   }
 }
+*/
 
 @media (min-width: 768px) and (max-width: 991px) {
   /* line 5, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss */
@@ -6682,3 +6689,6 @@ h6 {
 }
 
 /*# sourceMappingURL=style.css.map */
+.listHotel i{
+  padding: 2px;
+}
