--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2509,11 +2509,15 @@ h3 {
 }
 
 /* line 1, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss */
-.where_togo_area {
+.where_togo_area,.where_togo_area div {
   background: #040E27;
-  padding: 50px 0;
+  /*padding: 50px 0;*/
 }
-
+#pills-tab_index li a{
+  color: #fff;
+  border-radius:0px;
+  padding:16px;
+}
 /* line 5, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss */
 .where_togo_area .form_area h4{
   font-size: 16px;
@@ -2573,9 +2577,14 @@ h3 {
 
 /* line 29, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss */
 .where_togo_area .search_wrap .input_field {
-  width: 220px;
+  width: 240px;
 }
-
+.where_togo_area .search_wrap .input_field_voyage {
+  width: 310px;
+}
+.where_togo_area .search_wrap .input_field_billet {
+  width: 233px;
+}
 @media (min-width: 768px) and (max-width: 991px) {
   /* line 29, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_where_to_go.scss */
   .where_togo_area .search_wrap .input_field {
@@ -2695,7 +2704,7 @@ h3 {
 
 /* line 1, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_destination.scss */
 .popular_destination_area {
-  padding-top: 140px;
+  padding-top: 60px;
   padding-bottom: 120px;
 }
 
